ordenamiento de codigo

--- a/contactanos.html
+++ b/contactanos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
 
     </style>
 </head>
+
 <body>
     <header class="site-header">
         <h1>Contáctanos</h1>
@@ -56,9 +58,14 @@
                     <span>🕒 Horario: Lunes a Viernes, 9:00 - 21:00</span>
                 </div>
                 <div class="info-item">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62021.1825892364!2d-89.22816965136721!3d13.698821600000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63373e0661bc8d%3A0xfc9ccfe0f41d8144!2sAlmacenes%20SIMAN%20%E2%80%A2%20Plaza%20Mundo!5e0!3m2!1ses!2ssv!4v1752119041795!5m2!1ses!2ssv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62021.1825892364!2d-89.22816965136721!3d13.698821600000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63373e0661bc8d%3A0xfc9ccfe0f41d8144!2sAlmacenes%20SIMAN%20%E2%80%A2%20Plaza%20Mundo!5e0!3m2!1ses!2ssv!4v1752119041795!5m2!1ses!2ssv"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
